default/objects/Form_A__c/Form_A__c.object-meta.xml
<CustomObject>
    <label>Form A</label>
    <nameField>
        <label>Form A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form A</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>