default/objects/Form_A__c/fields/Approx_Commissioning_Date__c.field-meta.xml
<CustomField>
    <fullName>Approx_Commissioning_Date__c</fullName>
    <label>Approx Commissioning Date</label>
    <type>Date</type>
</CustomField>