default/objects/Form_A__c/fields/Capacity_Of_Machine__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Of_Machine__c</fullName>
    <label>Capacity Of Machine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>