default/objects/Form_A__c/fields/Capacity_Unit__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Unit__c</fullName>
    <label>Capacity Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>