default/objects/Form_A__c/fields/Commissioning_Year__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Year__c</fullName>
    <formula>TEXT(YEAR( Approx_Commissioning_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissioning Year</label>
    <type>Text</type>
</CustomField>