default/objects/Form_A__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <label>Competitor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starlinger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>