default/objects/Form_A__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Form A</relationshipLabel>
    <relationshipName>Form_A</relationshipName>
    <type>Lookup</type>
</CustomField>