default/objects/Form_A__c/fields/Date_Of_Loss_Reported__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Loss_Reported__c</fullName>
    <label>Date Of Loss Reported</label>
    <type>Date</type>
</CustomField>