default/objects/Form_A__c/fields/Loss_Type__c.field-meta.xml
<CustomField>
    <fullName>Loss_Type__c</fullName>
    <label>Loss Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drop</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>