default/objects/Form_A__c/fields/Order_Loss_Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Order_Loss_Reported_By__c</fullName>
    <label>Order Loss Reported By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>