default/objects/Form_A__c/fields/Type_of_Machine_Family__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Machine_Family__c</fullName>
    <label>Type of Machine (Family)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Family</valueSetName>
    </valueSet>
</CustomField>